--- a/gulp_001/src_webapp/modules/js_demo/index.less
+++ b/gulp_001/src_webapp/modules/js_demo/index.less
@@ -20,33 +20,35 @@ body {
   position: relative;
   box-sizing: border-box;
   padding-bottom: 100px;
-}
-.app>.demo{
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  font-weight: 800;
+  >.demo{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-weight: 800;
+  }
+  >.demo:after {
+    display: inline-block;
+    width: 0;
+    height: 100%;
+    vertical-align: middle;
+    content: "";
+  }
+  >.info{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    background-color: rgba(255,255,255,0.3);
+    font-weight: 800;
+    text-align: center;
+    color: #fff;
+    font-size: 50px;
+  }
 }
 
-.app>.demo:after {
-  display: inline-block;
-  width: 0;
-  height: 100%;
-  vertical-align: middle;
-  content: "";
-}
 
-
-.app>.info{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  line-height: 100px;
-  background-color: rgba(255,255,255,0.3);
-  font-weight: 800;
-  text-align: center;
-  color: #fff;
-  font-size: 50px;
+.box {
+  transition: all 2s;
 }
